--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: datacheck
 Type: Package
 Title: Tools for checking data consistency
-Version: 0.9.8
+Version: 1.0.0
 Date: 2013-04-22
 Author: Reinhard Simon
 Maintainer: "Simon, Reinhard (CIP)" <R.SIMON@CGIAR.ORG>
-URL: http://glimmer.rstudio.org/cipotato/datacheck
-Description: The package provides functionality to check variables
-        against a set of basic rules. A rule file can be accompanied by
-        lookup tables. In addition, the package provides some
-        convenience testing functions that may serve also as an example
-        for defining clearer 'data rules' or tests. An html based user
-        interface facilitates initial exploration of the functionality.
+URL: http://glimmer.rstudio.com/cipotato/datacheck
+Description: The package provides functionality to check variables against a
+    set of basic rules. A rule file can be accompanied by look-up tables. In
+    addition, the package provides some convenience testing functions that may
+    serve also as an example for defining clearer 'data rules' or tests. An
+    HTML based user interface facilitates initial exploration of the
+    functionality.
 License: GPL (>= 3)
 LazyData: yes
 Suggests: knitr
@@ -19,7 +19,7 @@ VignetteBuilder: knitr
 Depends: R (>= 2.15.1), grDevices, Hmisc, stringr, shiny, testthat,
         xtable
 Collate: 'datacheck.R'
-Packaged: 2013-04-26 18:46:26 UTC; rsimon
+Packaged: 2013-10-21 16:39:22 UTC; rsimon
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-04-27 09:18:18
+Date/Publication: 2013-10-21 19:46:44
