--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: datacheck
 Type: Package
 Title: Tools for checking data consistency
-Version: 0.9.6
-Date: 2013-04-16
+Version: 0.9.8
+Date: 2013-04-22
 Author: Reinhard Simon
 Maintainer: "Simon, Reinhard (CIP)" <R.SIMON@CGIAR.ORG>
+URL: http://glimmer.rstudio.org/cipotato/datacheck
 Description: The package provides functionality to check variables
         against a set of basic rules. A rule file can be accompanied by
         lookup tables. In addition, the package provides some
@@ -18,7 +19,7 @@ VignetteBuilder: knitr
 Depends: R (>= 2.15.1), grDevices, Hmisc, stringr, shiny, testthat,
         xtable
 Collate: 'datacheck.R'
-Packaged: 2013-04-16 21:05:15 UTC; rsimon
+Packaged: 2013-04-26 18:46:26 UTC; rsimon
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-04-16 23:37:27
+Date/Publication: 2013-04-27 09:18:18
