--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,25 @@
 Package: datacheck
 Type: Package
-Title: Tools for checking data consistency
-Version: 1.0.4
-Date: 2013-09-23
-Author: Reinhard Simon
+Title: Tools for Checking Data Consistency
+Version: 1.2.2
+Date: 2015-04-16
 Maintainer: "Simon, Reinhard (CIP)" <R.SIMON@CGIAR.ORG>
-URL: http://glimmer.rstudio.com/cipotato/datacheck
-Description: The package provides functionality to check variables against a
-    set of basic rules. A rule file can be accompanied by look-up tables. In
-    addition, the package provides some convenience testing functions that may
-    serve also as an example for defining clearer 'data rules' or tests. An
+Author: "Simon, Reinhard (CIP)" <R.SIMON@CGIAR.ORG>, Jose Francisco Loff <jfloff at phistat.com>
+Copyright: International Potato Center (CIP)
+License: MIT + file LICENSE
+URL: https://github.com/c5sire/datacheck
+BugReports: https://github.com/c5sire/datacheck/issues
+Description: Functions to check variables against a
+    set of data quality rules. A rule file can be accompanied by look-up tables. In
+    addition, there are some convenience functions that may
+    serve as an example for defining clearer 'data rules'. An
     HTML based user interface facilitates initial exploration of the
     functionality.
-License: GPL (>= 3)
 LazyData: yes
-Imports: Hmisc, shiny, stringr
-Suggests: knitr, xtable
-VignetteBuilder: knitr
-Depends: R (>= 2.15.1), grDevices
-Packaged: 2014-09-23 16:12:17 UTC; ripley
-NeedsCompilation: no
+Encoding: UTF-8
+Imports: stringr, Hmisc, shiny
+Depends: R (>= 3.1.0), grDevices
 Repository: CRAN
-Date/Publication: 2014-09-23 18:13:53
+Packaged: 2015-04-17 15:21:45 UTC; rsimon
+NeedsCompilation: no
+Date/Publication: 2015-04-18 08:56:10
